그룹 별 도서 수 조회 API 추가
